--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "trailingComma": "none",
-  "tabWidth": 4,
+  "trailingComma": "all",
+  "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "printWidth": 80,
+  "endOfLine": "auto"
 }
